Fix mobile background covering content bug

--- a/src/components/Projects/ProjectItem/ProjectItem.module.scss
+++ b/src/components/Projects/ProjectItem/ProjectItem.module.scss
@@ -20,6 +20,7 @@
 .content {
   --padding: 1rem;
   padding: var(--padding);
+  position: relative;
   background: linear-gradient(rgba(#444, 0), rgba(#444, 0.15) 50%, rgba(#444, 0.3));
 }
 
